* Mon Sep 08 2008 Darryl Pierce <dpierce@redhat.com> - 0.1.0-1
- First official build for Fedora.

* Wed Sep 03 2008 Darryl Pierce <dpierce@redhat.com> - 0.0.2-3
- Added a build requirement for rubygem-rake.

* Tue Aug 26 2008 Darryl Pierce <dpierce@redhat.com> - 0.0.2-2
- Fixed the licensing in each source module to show the code is released under
  LGPLv2.1.
- Added %check to the spec file to run tests prior to creating the RPM.

* Thu Aug 21 2008 Darryl Pierce <dpierce@redhat.com> - 0.0.2-1
- Added a call to update prior to saving or updating a system. If the update
  fails, then an Exception is raised.

* Wed Aug 13 2008 Darryl Pierce <dpierce@redhat.com> - 0.0.1-3
- Added caching for the auth_token to prevent extraneous calls to login.
- Reworked and refined how cobbler_collection fields are processed, adding 
  support for both array and has properties.
- Rewrote the documentation for Cobbler::Base to make it easier to understand
  how to extend it to support other Cobbler types.
- Refactored the examples to clean up the code.

* Wed Aug 13 2008 Darryl Pierce <dpierce@redhat.com> - 0.0.1-2
- Removed markup of cobbler.yml and a config file. Fixed a few small bugs 
  in the code for using it as a gem.

* Mon Aug 04 2008 Darryl Pierce <dpierce@redhat.com> - 0.0.1-1
- Initial package