@@ -22,7 +22,7 @@ require 'rake/testtask'
 require 'rake/gempackagetask'
 
 PKG_NAME='rubygem-cobbler'
-PKG_VERSION='0.1.0'
+PKG_VERSION='0.1.1'
 PKG_FILES=FileList[
   'Rakefile', 'README', 'ChangeLog', 'COPYING', 'NEWS', 'TODO',
   'lib/**/*.rb',
