@@ -1,3 +1,6 @@
+* Fri Oct 10 2008 Darryl Pierce <dpierce@redhat.com> - 0.1.1-1
+- Added support for image-based systems.
+
 * Mon Sep 08 2008 Darryl Pierce <dpierce@redhat.com> - 0.1.0-1
 - First official build for Fedora.
 
